--- a/app/src/main/res/layout/simple_content_quiz.xml
+++ b/app/src/main/res/layout/simple_content_quiz.xml
@@ -9,9 +9,11 @@
 
     <TextView
         android:id="@+id/quiz_question"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="65dp"
+        android:layout_gravity="center"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:padding="5dp"
         android:text="TextView"
