--- a/app/src/main/res/layout/slidingimages.xml
+++ b/app/src/main/res/layout/slidingimages.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
